...
                
                DatePicker("Actual Time", selection: $actualTime)
                Button("Log"){
                    let entry = MedicationHistory(administration: medication.administration, startTime: actualTime, dose: medication.dose, title: medication.title)
                    log(entry: entry)
                    presentAlert.toggle()
                }.alert("WooHoo!", isPresented: $presentAlert){
                    Button("Completed", role: .cancel){
                        modelContext.insert( Point(category: Category.medication, timestamp: Date()))
                        dismiss()
                    }
                } message: {
                    Text("You have recovered +\(self.medication.category.points) points!")
                }
...
