...
                    .frame(width:400, height: 300)
                    .background(.ultraThinMaterial.opacity(0.8))
                    .cornerRadius(20)
                    .shadow(color: Color.black.opacity(0.3), radius: 10)
                
            }
            NavigationLink("My Activity And Trends", destination: MainView())
                .buttonStyle(BorderedProminentButtonStyle())
                .frame(width: 300, height: 50, alignment: .center)
                    .background(Color.blue)
                    .foregroundColor(Color.white)
                    .cornerRadius(10)
            
...
        .onAppear {
            if !self.acknowledgedDisclaimer {
                showDisclaimer.toggle()
            }
        }
        .alert("Disclaimer", isPresented: $showDisclaimer){
            Button("Confirm") {
                UserDefaults.standard.setValue(true, forKey: "acknowledgedDisclaimer")
                showDisclaimer.toggle()
            }
            Button("Cancel", role: .cancel){
                showDisclaimer.toggle()
            }
...
